# GameManager

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/plans/: SDXL_LayerDiffuse_Suggestions.txt  codex_offline_icon_downscaling_plan.md  native_sdxl_layerdiffuse_backend_plan.md  sdxl_layer_diffuse_implementation_suggestions.md  (+2 more)
gamemanager/: __init__.py  __main__.py  app_state.py  db.py  main.py  models.py
iconmaker_gui/: __init__.py  __main__.py  dialogs.py  main.py
tests/: test_app_state.py  test_background_removal.py  test_browser_downloads.py  test_elevated_delete.py  test_epic_connector.py  test_folder_icons.py  test_folder_metadata_storage.py  test_gog_connector.py  test_gpu_orchestrator.py  test_icon_apply_subprocess.py  test_icon_background_fill.py  test_icon_construction_helpers.py  test_icon_library_runtime.py  test_icon_pipeline.py  test_icon_readability.py  test_icon_repair.py  test_icon_sources.py  test_icon_templates.py  test_image_prep.py  test_itch_connector.py  test_main_migration.py  test_main_window_columns.py  test_main_window_icon_ops_matching.py  test_normalization.py  test_operation_cancel.py  test_operations.py  test_runtime_icon.py  test_scan_cache.py  test_scanner.py  test_secret_storage.py  test_sgdb_target_picker_dialog.py  test_sorting.py  test_steam_connector.py  test_steamgriddb_targeting.py  test_steamgriddb_upload.py  test_storage.py  test_store_id_resolution.py  test_store_linking.py  test_store_ownership_refresh.py  test_store_urls.py  (+7 more)
tools/: measure_gpu_vram.py  run_tests.ps1
(+99 files in other folders)
