[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-backup-manager"
version = "0.1.0"
description = "Windows GUI tool to manage game backup roots and archives"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7.0",
  "psutil>=5.9.0",
  "Pillow>=10.0.0",
  "pillow-avif-plugin>=1.5.0",
  "requests>=2.31.0",
  "rembg>=2.0.61",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-qt>=4.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.package-data]
gamemanager = ["assets/*.ico"]
